Implement WhatsApp reminder features and update environment configurations
- Added WhatsApp reminder functionality in the onboarding and settings controllers, including validation for phone numbers and reminder times.
- Updated the Member model to include new fields for WhatsApp reminders.
- Introduced environment variables for Ultramsg API integration in the .env.example and services configuration.
- Enhanced localization with new messages for WhatsApp reminders in English and Amharic.
- Scheduled a command for sending WhatsApp reminders every minute.

--- a/.env.example
+++ b/.env.example
@@ -40,4 +40,8 @@ MAIL_MAILER=log
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+ULTRAMSG_BASE_URL=https://api.ultramsg.com
+ULTRAMSG_INSTANCE_ID=
+ULTRAMSG_TOKEN=
+
 VITE_APP_NAME="${APP_NAME}"
