Implement webhook secret management for UltraMsg integration
- Added a new field for the webhook verification secret in the .env.example file and updated the services configuration to include it.
- Enhanced the WhatsAppSettingsController to manage the webhook secret, including methods for updating and validating the secret.
- Implemented a verification mechanism in the UltraMsgWebhookController to reject unauthorized requests based on the configured secret.
- Updated the admin WhatsApp settings view to allow users to set and save the webhook secret, with appropriate UI elements and instructions.
- Added tests to ensure proper handling of webhook requests based on the secret, including acceptance and rejection scenarios.
- Included localization strings for the webhook secret management in both English and Amharic, improving user guidance.

--- a/.env.example
+++ b/.env.example
@@ -43,5 +43,6 @@ MAIL_FROM_NAME="${APP_NAME}"
 ULTRAMSG_BASE_URL=https://api.ultramsg.com
 ULTRAMSG_INSTANCE_ID=
 ULTRAMSG_TOKEN=
+ULTRAMSG_WEBHOOK_SECRET=
 
 VITE_APP_NAME="${APP_NAME}"
