Add WhatsApp reminder once-only feature and related settings
- Introduced a toggle for sending reminders once per day, allowing users to limit reminders to a single notification daily.
- Updated the WhatsAppSettingsController to handle the new reminder setting and save it to the .env file.
- Enhanced the admin WhatsApp settings view to include the new toggle with appropriate localization strings in English and Amharic.
- Modified the SendWhatsAppReminders command to respect the new reminder setting when querying due members.
- Updated routes to support the new reminder once-only functionality.

--- a/.env.example
+++ b/.env.example
@@ -44,5 +44,6 @@ ULTRAMSG_BASE_URL=https://api.ultramsg.com
 ULTRAMSG_INSTANCE_ID=
 ULTRAMSG_TOKEN=
 ULTRAMSG_WEBHOOK_SECRET=
+WHATSAPP_REMINDER_ONCE_ONLY=true
 
 VITE_APP_NAME="${APP_NAME}"
