Add Telegram integration settings and localization support
- Introduced new environment variables for Telegram bot configuration in .env.example.
- Added Telegram settings to services.php for bot token and default chat ID.
- Expanded localization strings in English and Amharic for Telegram settings and related functionalities.
- Updated admin dashboard and layout to include links for managing Telegram settings.
- Implemented new routes for Telegram settings management and testing functionality.

--- a/.env.example
+++ b/.env.example
@@ -45,5 +45,7 @@ ULTRAMSG_INSTANCE_ID=
 ULTRAMSG_TOKEN=
 ULTRAMSG_WEBHOOK_SECRET=
 WHATSAPP_REMINDER_ONCE_ONLY=true
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_DEFAULT_CHAT_ID=
 
 VITE_APP_NAME="${APP_NAME}"
