Enhance Telegram integration with bot username and menu synchronization
- Added support for Telegram bot username in the configuration and settings.
- Implemented functionality to sync Telegram menu commands, providing deep-link entry points for users.
- Updated the admin interface to display bot status and entry links, improving user experience.
- Expanded localization strings for new features and enhanced the Telegram settings management.

--- a/.env.example
+++ b/.env.example
@@ -47,5 +47,7 @@ ULTRAMSG_WEBHOOK_SECRET=
 WHATSAPP_REMINDER_ONCE_ONLY=true
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_DEFAULT_CHAT_ID=
+TELEGRAM_BOT_USERNAME=
+TELEGRAM_WEBHOOK_SECRET=
 
 VITE_APP_NAME="${APP_NAME}"
