feat(whatsapp): add church phone configuration for WhatsApp integration
- Introduced a new environment variable for the church's WhatsApp phone number to streamline communication.
- Updated the services configuration to include the church phone number for WhatsApp messaging.
- Modified the welcome view to dynamically generate the WhatsApp link using the church phone number, enhancing user engagement.

--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,7 @@ ULTRAMSG_BASE_URL=https://api.ultramsg.com
 ULTRAMSG_INSTANCE_ID=
 ULTRAMSG_TOKEN=
 ULTRAMSG_WEBHOOK_SECRET=
+ULTRAMSG_CHURCH_PHONE=+447757668785
 WHATSAPP_REMINDER_ONCE_ONLY=true
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_DEFAULT_CHAT_ID=
